# Tranc3

./: .all-contributorsrc  .codecov.yml  .coderabbit.yaml  .dockerignore  .editorconfig  .env.development.example  .env.example  .env.optional-services.example  .env.production.example  .env.uat.example  .gitguardian.yaml  .gitguardian.yml  .gitignore  .gitleaks.toml  .gitmodules  .mergify.yml  .osv-scanner.toml  .pre-commit-config.yaml  .renovate.json  .secrets.baseline  .security-baseline  .trivyignore  .typos.toml  .woodpecker.yml  ARCHITECTURE_THREAT_MODEL.md  ARCHITECTURE_UPDATE.md  CF_WORKER_MIGRATION_ROADMAP.md  CLAUDE.md  CODE_OF_CONDUCT.md  CROSS_REPO_SYNERGY.md  DEPLOYMENT.md  Dockerfile  FREE_TIER_REGISTRY.md  INFINITY_ARCHITECTURE.md  LICENSE  Makefile  PHASE20_SWOT_FORENSIC.md  PHASE21_SWOT_FORENSIC.md  PHASE22_ENHANCEMENT.md  PHASE23_ENHANCEMENT.md  (+48 more)
.Jules/: palette.md
.codeql/: codeql-config.yml
.continue/: config.json
.githooks/: pre-push
.github/: SECRETS.md  allcontributors.yml  codeql-config.yml  dependabot.yml
.jules/: bolt.md
.security_learning/: history.json  patterns.json  suppress.json
.security_telemetry/: latest.json  scan_20260522T053306_1ffc2e05.json
Dimensional/: __init__.py  bus.py  cross_bridge_orchestrator.py  error_handlers.py  log_sanitize.py  models.py  optional_import.py  path_validation.py  registry.py  sanitize.py  security.py  three_bridge_coordinator.py  url_validation.py
aeonmind/python/: pyproject.toml
aeonmind/python/aeonmind/: __init__.py
aeonmind/python/aeonmind/core/: __init__.py  adaptive.py  definitions.py  fluidic_liquidic.py  frontier_agent.py  genetic_dna.py  quantum.py  rust_bridge.py
aeonmind/python/aeonmind/services/: __init__.py  bot_services.py
aeonmind/python/aeonmind/systems/: __init__.py  orchestrator.py
aeonmind/python/tests/: conftest.py  test_adaptive.py  test_bot_services.py  test_definitions.py  test_frontier_agent.py  test_genetic.py  test_liquidic.py  test_quantum.py
aeonmind/rust/: Cargo.toml
aeonmind/rust/benches/: liquid_reservoir.rs  quantum_circuit.rs
aeonmind/rust/src/: adaptive.rs  genetic.rs  lib.rs  liquid.rs  python_bindings.rs  quantum.rs  wasm_bridge.rs
aeonmind/wasm/: Cargo.toml
aeonmind/wasm/src/: lib.rs
ansible/: ansible.cfg
api/: __init__.py  auth.py  core.py  health.py  models.py  users.py
archive/: README.md  api_ecosystem.py  api_enhanced.py
cloudflare/: DEPLOY.md  README.md  deploy-all.sh  deploy-manifest.json  deploy.sh
compliance/: compliance_action_tracker.yaml  mc_validation_results.yaml  register.yaml  test_evidence.yaml  tranc3_register_bridge.yaml  waivers.yaml
config/: magna_carta_config.json
dashboard/: admin-os.css  admin-os.js  app.js  index.html  infinity-admin-os.html  styles.css
deploy/: DNS_CUTOVER.md  LIVE_DEPLOY.md  grafana-dashboard.json  otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml  runbook.md
docker/: Dockerfile  Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml  nginx.conf
docs/: 01-MAGNACARTA-FOUNDATION.md  ADAPTIVE_PLATFORM_ROTATION.md  API_REFERENCE.md  BRANCH_CONSOLIDATION.md  BRANCH_INTEGRATION_REPORT.md  CVE_REMEDIATION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_SINGLE_PATH.md  DESIGN_SYSTEM.md  DOC-01-Project-Charter.md  DOC-02-System-Architecture.md  DOC-03-API-Reference.md  DOC-14-Zero-Cost-Hosting.md  DOC-15-Mind-Map.md  DOC-16-Lotus-Diagram.md  DOC-17-SCAMPER-5Whys.md  FORENSIC_ASSESSMENT_2026-05-31.md  HOSTIPC_RISK_ACCEPTANCE.md  INFINITY_ADMIN_OS.md  INFINITY_ECOSYSTEM_MATRIX.md  INTEGRATION_SCOPE_PLAN.md  KNOWLEDGE_BASE.md  MASTER_WORKER_ZERO_COST.md  PHASE25_REPO_REVIEW.md  PHASE25_UXUI_ENHANCEMENT.md  PHASE26_DIRECTORY_STRUCTURE.md  PHASE27_DIMENSIONAL_NEXUS.md  PHASE28_ADVANCED_BRIDGE_SYSTEMS.md  PHASE7_ARCHITECTURE.md  PHASE7_DEPLOYMENT.md  PLATFORM_INFRASTRUCTURE_MODE.md  PRE_DEPLOY_QUALITY.md  PRODUCTION_FORENSIC_ASSESSMENT.md  PRODUCTION_READINESS_STATUS.md  PRODUCTION_ROADMAP.md  RESEARCH_ADVANCEMENT_2026.md  RESEARCH_FINDINGS.md  SECURITY-ASSESSMENT.md  (+11 more)
flux/: flux-system.yaml
migrations/: env.py
monitoring/: alertmanager.yml  blackbox.yml  jaeger.yml  loki.yml  otel-collector.yml  prometheus-uat.yml  prometheus.yml  promtail.yml  tempo.yml
reports/: a11y-summary.json  lighthouse.html  lighthouse.json
rust_extensions/tranc3_crypto/: Cargo.toml  pyproject.toml
rust_extensions/tranc3_crypto/src/: lib.rs
rust_extensions/tranc3_snn/: Cargo.toml
rust_extensions/tranc3_snn/src/: lib.rs
scripts/: apply_repairs.py  bootstrap.sh  branch_benefit_audit.py  build_cmdb.py  build_master_service_matrix.py  chat.py  check_deps.py  check_master_matrix_freshness.py  check_stack.sh  citadel_compose_validate.py  citadel_deploy_all.bat  citadel_deploy_all.py  citadel_deploy_all.sh  citadel_preflight.py  db-init.sql  db-provision.sh  dependency_audit.py  deploy.sh  deploy_cloud.bat  deploy_cloud.py  deploy_live.sh  dockerbuild.sh  dr_restore.py  ensure_p0_worker_images.py  entity_registry_audit.py  estate_lint.py  export_forgejo_code_scan_alerts.py  fix_bandit_issues.py  (+72 more)
src/nanoservices/nsa_broker/: Cargo.toml
src/nanoservices/nsa_broker/src/: main.rs
src/nanoservices/rust/tranc3-nanoservice/: Cargo.toml
src/nanoservices/rust/tranc3-nanoservice/src/: a2a.rs  adaptive.rs  bridge.rs  crush.rs  hsm.rs  main.rs  storage.rs
tranc3-bots/: Dockerfile  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
tranc3-bots/bots/: __init__.py  handlers.py  pool.py  registry.py  types.py
tranc3-bots/client/: __init__.py  client.py
tranc3-bots/scripts/: extract_bots_repo.sh  push_to_forgejo.sh  start.sh
tranc3-bots/server/: app.py
workers/nexus-ws-rs/: Cargo.toml  Dockerfile
workers/nexus-ws-rs/src/: main.rs
workers/rate-limit-service-rs/: Cargo.toml  Dockerfile
workers/rate-limit-service-rs/src/: main.rs
workers/the-void/rust_crypto/: Cargo.toml  __init__.py
workers/the-void/rust_crypto/src/: lib.rs
workers/vault-service-rs/: Cargo.toml  Dockerfile
workers/vault-service-rs/src/: main.rs
(+2195 files in other folders)
