[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tranc3"
version = "0.8.0"
requires-python = ">=3.11"
description = "Trancendos AI Platform — Luminous inference engine + MCP server"

# ── Ruff (lint + format) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".forgejo",
    "docs/reference",
    "**/*.sh",
    "aeonmind",      # separate package — has its own CI (aeonmind/python/.github/workflows)
    "Dimensional",   # separate package — imported by workers, linted separately
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "B", "I"]
ignore = [
  "E501",   # line length — enforced by formatter, not lint
  "B008",   # function calls in default args (FastAPI Depends pattern)
  "C901",   # complexity — warned, not blocked
]

[tool.ruff.lint.per-file-ignores]
"tests/*"  = ["S", "B", "C408", "C416"]
"scripts/*" = ["T201"]   # print() allowed in scripts
"api.py"   = ["E402", "B904"]
"api_ecosystem.py" = ["E402", "B904"]  # middleware imports must come after app creation
"api_enhanced.py" = ["E402", "B904"]   # middleware imports must come after app creation
"migrations/*" = ["E402"]
"train.py" = ["E402"]
"tranc3-bots/*" = ["E402", "E702"]
"src/neural/attention_router.py" = ["C416"]
# Nanoservices: re-export __init__ files and research/simulation modules
"src/nanoservices/**/__init__.py" = ["F401"]
# S311: nanoservices use stdlib random for simulation/ML — not security-sensitive
# S105/S106: symbolic names (SECRET, PASS, TOP_SECRET) are event/enum labels, not passwords
# S108: /dev/shm and /tmp paths are intentional for IPC and cache storage
# S310: internal URL opens (health checks, local services) are not external threats
# S324: MD5 used for non-security cache keys only
"src/nanoservices/**" = ["B007", "B905", "E741", "E712", "W291", "W293", "S105", "S106", "S108", "S310", "S311", "S324"]
# Simulation/AI modules outside nanoservices also use random for non-security purposes
"src/evolution/**"   = ["S311"]
"src/fluidic/**"     = ["S311"]
"src/mesh/**"        = ["S311"]
"src/neural/**"      = ["S311"]
"src/resonate/**"    = ["S311"]
"src/tranquility/**" = ["S311"]
# Self-deployment agent runs CLI commands intentionally (deployment automation)
"src/nanoservices/self_deployment_agent/**" = ["S603", "S607"]
# Formal verification and WASM runtimes spawn controlled subprocesses intentionally
"src/nanoservices/formal_verification/**" = ["S603"]
"src/nanoservices/wasm_edge/**"           = ["S603"]
# Event/error catalog strings are symbolic names, not passwords — all S105 are false positives
"src/errors/error_catalog.py" = ["S105"]
"src/event_bus/types.py"      = ["S105"]
# Self-hosted servers bind 0.0.0.0 intentionally (behind Traefik reverse proxy)
"src/main_enhanced.py"              = ["S104"]
"src/nanoservices/nano_server.py"   = ["S104"]
# Observability health checks ping internal services over HTTP — S310 false positive
"src/observability/health.py" = ["S310"]
"shared_core/__init__.py" = ["F401"]
"workers/dimensional-nexus-service/worker.py" = ["E402"]
"workers/hive-service/worker.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
show_error_codes = true
warn_unused_ignores = false

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = false
log_level = "WARNING"
addopts = "--strict-markers -q"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: requires live external services",
  "chaos: fault injection tests",
]

# ── bandit ─────────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src", "api.py"]
exclude_dirs = ["tests", "scripts"]
severity = "low"
confidence = "low"
skips = [
  "B101",  # assert statements (acceptable in non-production paths)
]

# ── semgrep ────────────────────────────────────────────────────────────────
[tool.semgrep]
config = "auto"

# ── safety ─────────────────────────────────────────────────────────────────
[tool.safety]
ignore = [
  { id = "PYSEC-2025-210", reason = "Profiler not used in Tranc3" },
  { id = "PYSEC-2025-194", reason = "TorchScript JIT not used in Tranc3" },
  { id = "PYSEC-2025-196", reason = "Flatbuffer loading not used in Tranc3" },
  { id = "PYSEC-2025-195", reason = "Local-only; mitigated by input sanitization" },
  { id = "PYSEC-2025-193", reason = "Local-only; mitigated by input sanitization" },
  { id = "PYSEC-2025-192", reason = "Local-only; mitigated by input sanitization" },
  { id = "PYSEC-2026-139", reason = "Mitigated by weights_only=True on all torch.load()" },
  { id = "PYSEC-2025-191", reason = "Disputed; mkldnn not used in Tranc3" },
  { id = "PYSEC-2025-197", reason = "Local-only; no direct CUDA allocator interaction" },
  { id = "PYSEC-2025-189", reason = "Remote-capable but high complexity; profiler not used" },
  { id = "PYSEC-2025-190", reason = "Local-only; quantized sigmoid not used in Tranc3" },
]

# ── coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true

# ── pip-audit ─────────────────────────────────────────────────────────
[tool.pip-audit]
strict = false
desc = true
