[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tranc3"
version = "0.8.0"
requires-python = ">=3.11"
description = "Trancendos AI Platform — Luminous inference engine + MCP server"

# ── Ruff (lint + format) ──────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".forgejo",
    "aeonmind",
    "cloudflare",
    "Dimensional",
    "docs/reference",
    "tranc3-ts",
    "web/node_modules",
    "**/*.sh",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "B", "I"]
ignore = [
  "E501",   # line length — enforced by formatter, not lint
  "B008",   # function calls in default args (FastAPI Depends pattern)
  "C901",   # complexity — warned, not blocked
]

[tool.ruff.lint.per-file-ignores]
"tests/*"  = ["S", "B", "C408", "C416"]
"scripts/*" = ["T201"]   # print() allowed in scripts
"api.py"   = ["E402", "B904"]
"api_ecosystem.py" = ["E402", "B904"]  # middleware imports must come after app creation
"api_enhanced.py" = ["E402", "B904"]   # middleware imports must come after app creation
"migrations/*" = ["E402"]
"train.py" = ["E402"]
"tranc3-bots/*" = ["E402", "E702"]
"workers/*/worker.py" = ["E402"]  # mount_prometheus after FastAPI() app instance
"src/protocols/**" = ["B027"]  # optional ABC lifecycle hooks with default no-op
"src/entities/templates/**" = ["B027"]
"src/neural/attention_router.py" = ["C416"]
# Nanoservices: re-export __init__ files and research/simulation modules
"src/nanoservices/**/__init__.py" = ["F401"]
"src/nanoservices/**" = ["B007", "B905", "E741", "E712", "W291", "W293"]
"shared_core/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
show_error_codes = true
warn_unused_ignores = false
exclude = [
  "aeonmind/",
  "cloudflare/",
  "Dimensional/",
  "docs/",
  "tranc3-ts/",
  "workers/_generate_workers.py",
]

[[tool.mypy.overrides]]
module = [
  "src.*.routes",
  "src.nanoservices.*",
  "src.tensorflow_core.*",
  "src.training.*",
  "src.workflow.phase4_nodes",
  "src.mcp.spark_phase4_tools",
  "src.database.schema",
  "src.chronos.routes",
  "src.lab.routes",
]
ignore_errors = true

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = false
log_level = "WARNING"
addopts = "--strict-markers -q"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: requires live external services",
  "chaos: fault injection tests",
]

# ── bandit ─────────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src", "api.py", "workers"]
exclude_dirs = [
  "tests",
  "scripts",
  "aeonmind",
  "cloudflare",
  "Dimensional",
  "docs",
  "tranc3-ts",
  "web",
]
severity = "low"
confidence = "low"
skips = [
  "B101",  # assert in tests/dev paths
  "B311",  # random — used for ML/simulation hashing, not secrets
  "B324",  # weak hash — non-crypto etag/feature-hash (usedforsecurity=False)
]

# ── semgrep ────────────────────────────────────────────────────────────────
[tool.semgrep]
config = "auto"

# ── safety ─────────────────────────────────────────────────────────────────
[tool.safety]
ignore = [
  { id = "PYSEC-2025-210", reason = "Profiler not used in Tranc3" },
  { id = "PYSEC-2025-194", reason = "TorchScript JIT not used in Tranc3" },
  { id = "PYSEC-2025-196", reason = "Flatbuffer loading not used in Tranc3" },
  { id = "PYSEC-2025-195", reason = "Local-only; mitigated by input sanitization" },
  { id = "PYSEC-2025-193", reason = "Local-only; mitigated by input sanitization" },
  { id = "PYSEC-2025-192", reason = "Local-only; mitigated by input sanitization" },
  { id = "PYSEC-2026-139", reason = "Mitigated by weights_only=True on all torch.load()" },
  { id = "PYSEC-2025-191", reason = "Disputed; mkldnn not used in Tranc3" },
  { id = "PYSEC-2025-197", reason = "Local-only; no direct CUDA allocator interaction" },
  { id = "PYSEC-2025-189", reason = "Remote-capable but high complexity; profiler not used" },
  { id = "PYSEC-2025-190", reason = "Local-only; quantized sigmoid not used in Tranc3" },
]

# ── coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true

# ── pip-audit ─────────────────────────────────────────────────────────
[tool.pip-audit]
strict = false
desc = true

# ── uv (drop-in pip replacement, zero-cost) ───────────────────────────
# uv is used for faster dependency resolution in CI.
# Install: curl -LsSf https://astral.sh/uv/install.sh | sh
[tool.uv]
dev-dependencies = [
  "pip-audit",
  "bandit[toml]",
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "checkov",
  "semgrep",
  "cyclonedx-bom",
]

# ── checkov (IaC + Docker Compose security) ───────────────────────────
[tool.checkov]
# Frameworks to scan (dockerfile, docker-compose)
framework = ["dockerfile", "docker-compose"]
# Suppress known-acceptable findings
skip-check = [
  # Allow EXPOSE of high ports in dev Dockerfiles (self-hosted, no DMZ)
  "CKV_DOCKER_7",
  # Allow ADD (used for COPY+extract patterns in some workers)
  "CKV_DOCKER_4",
]
soft-fail = true
output = ["json"]

# ── osv-scanner ───────────────────────────────────────────────────────
# Config file: .osv-scanner.toml (false-positive suppression)
# Run: osv-scanner --recursive --config .osv-scanner.toml .
