[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tranc3-bots"
version = "1.0.0"
description = "Self-owned worker bots for the Tranc3 AI system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]

[project.scripts]
tranc3-bots = "server.app:app"

[tool.setuptools.packages.find]
include = ["bots*", "server*", "client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
