[package]
name = "aeonmind-core"
version = "0.1.0"
edition = "2021"
description = "AeonMind core — Liquid State, Genetic DNA, Quantum Decision, Adaptive Meta-Learning for Tranc3 Infinity Ecosystem"
license = "MIT"
repository = "https://github.com/Trancendos/Tranc3"

[lib]
name = "aeonmind_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
rayon = "1.10"
thiserror = "1"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["python"]
python = ["pyo3"]
wasm = []
full = ["python", "wasm"]

[[bench]]
name = "liquid_reservoir"
harness = false

[[bench]]
name = "quantum_circuit"
harness = false
