[package]
name = "aeonmind-wasm"
version = "0.9.0"
edition = "2021"
description = "AeonMind WebAssembly Edge Agent for the Tranc3 Infinity Ecosystem"
authors = ["Trancendos"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng"]

[profile.release]
opt-level = "s"
lto = true
