[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tranc3-crypto"
version = "0.1.0"
description = "Memory-safe, constant-time AES-256-GCM Rust extension for Tranc3"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tranc3_crypto"
