[package]
name = "tranc3_snn"
version = "0.1.0"
edition = "2021"
description = "High-performance INT8 SNN tensor operations for personality signal extraction (PyO3)"

[lib]
name = "tranc3_snn"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
