[package]
name = "rate-limit-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rate-limit-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
