[package]
name = "nsa-broker"
version = "0.1.0"
edition = "2021"
description = "NSA — Nanoservice Architecture Broker with shared memory IPC"
authors = ["Drew Porter <drew@trancendos.com>"]
license = "MIT"

[[bin]]
name = "nsa-broker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
