[package]
name = "tranc3-nanoservice"
version = "0.1.0"
edition = "2021"
description = "Tranc3 adaptive storage nanoservice with CRUSH-aware placement, multi-cloud fallback, and HSM integration"
authors = ["Drew Porter <drew@trancendos.com>"]
license = "MIT"

[[bin]]
name = "tranc3-nano"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# PKCS#11 HSM integration
cryptoki = "0.7"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# HTTP server (lightweight)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# System
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Metrics
# SECURITY FIX (2026-06-07): Updated protobuf from 2.28.0 to 2.29.0 to resolve
# uncontrolled recursion vulnerability (MODERATE). Prometheus depends on protobuf.
# See: https://github.com/Trancendos/Tranc3/security/dependabot/30
prometheus = "0.13"

# Bytes
bytes = "1"

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "2"

# HTTP types
http = "1"

# URL parsing
url = "2"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Max optimizations
strip = true          # Strip symbols
panic = "abort"       # Smaller binary
